# mocki

./: Cargo.toml  README.md
requests/: dynamic.http  dynamic_test.http  imposter_feature.http
src/: main.rs  prelude.rs  routing.rs
src/domain/: imposter.rs  mod.rs
src/infrastructure/http/: axum_handlers.rs  mod.rs
src/routing/: utils.rs
