[package]
name = "mocki"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.8.1", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["add-extension"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }
